clusters/proxmox-home/proxy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: proxy
  labels:
    app.kubernetes.io/name: proxy
    app.kubernetes.io/component: namespace
