clusters/proxmox-home/proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: proxy
  name: truenas-ingress-mtls
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: proxy/ca-secret
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
  labels:
    app.kubernetes.io/name: truenas-ingress-mtls
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - nas.mgsds.com
      secretName: nas.mgsds.com-tls
  rules:
    - host: nas.mgsds.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: proxy
  name: immich-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50000m
    nginx.ingress.kubernetes.io/server-snippet: |-
      proxy_http_version 1.1;
      proxy_set_header   Upgrade    $http_upgrade;
      proxy_set_header   Connection "upgrade";
      proxy_redirect     off;

      # set timeout
      proxy_read_timeout 600s;
      proxy_send_timeout 600s;
      send_timeout       600s;
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    nginx.ingress.kubernetes.io/auth-tls-secret: proxy/ca-secret
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
  labels:
    app.kubernetes.io/name: immich-ingress
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - immich.mgsds.com
      secretName: nas.mgsds.com-tls
  rules:
    - host: immich.mgsds.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: truenas
                port:
                  number: 30041
